--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,21 @@
-Deyan's Food Planing 
-Comming soon...
+<h1>Deyan's Food Planing</h1>
+
+<ul>
+    {{#each foodInformations}}
+    <li class="food-info-container">
+        <span>{{name}}</span>
+        <span>Carbs: {{carbsPer100g}}</span>
+        <span>Protein: {{proteinPer100g}}</span>
+        <span>Fats: {{fatPer100g}}</span>
+        <span>Calories: {{calories}}</span>
+    </li>
+    {{/each}}
+</ul>
+
+<style>
+    .food-info-container {
+        display: flex;
+        flex-direction: column;
+        padding: 0.25rem;
+    }
+</style>
