Add simple form for a new meal

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,6 @@
 <h1>Deyan's Food Planing</h1>
 
+<h2>Food information</h2>
 <ul>
     {{#each foodInformations}}
     <li class="food-info-container">
