Store a meal into a file and display all the meals on the page

--- a/views/new-meal.handlebars
+++ b/views/new-meal.handlebars
@@ -11,3 +11,11 @@
 
     <button type="submit">Submit</button>
 </form>
+
+<section>
+    <ul>
+        {{#each meals}}
+        <li>{{food}}x{{foodQuantity}} grams</li>
+        {{/each}}
+    </ul>
+</section>
