Create separate view for foods, add nav and rename paths for meals

--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -1,4 +1,4 @@
-<form action="/new-meal" method="post">
+<form action="/meals" method="post">
     <label for="food">Food</label>
     <select id="food-select" name="food">
         {{#each foodInformations}}
