--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,22 +1,3 @@
 <h1>Deyan's Food Planing</h1>
 
-<h2>Food information</h2>
-<ul>
-    {{#each foodInformations}}
-    <li class="food-info-container">
-        <span>{{name}}</span>
-        <span>Carbs: {{carbsPer100g}}</span>
-        <span>Protein: {{proteinPer100g}}</span>
-        <span>Fats: {{fatPer100g}}</span>
-        <span>Calories: {{calories}}</span>
-    </li>
-    {{/each}}
-</ul>
-
-<style>
-    .food-info-container {
-        display: flex;
-        flex-direction: column;
-        padding: 0.25rem;
-    }
-</style>
+<p>Construction site 🏗️</p>
