--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Desv Food Planning</title>
-    </head>
 
-    <body>
-        {{{body}}}
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Desv Food Planning</title>
+</head>
+
+<body>
+    <nav>
+        <ul class="nav-bar">
+            <li><a href="/foods">Foods</a></li>
+            <li><a href="/meals">Meals</a></li>
+        </ul>
+    </nav>
+    {{{body}}}
+</body>
 </html>
+
+<style>
+    .nav-bar {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        gap: 0.5rem;
+    }
+</style>
