--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -1,14 +1,21 @@
-<form action="/meals" method="post">
-    <label for="food">Food</label>
-    <select id="food-select" name="food-id">
-        {{#each foodInformations}}
-        <option value={{id}}>{{name}}</option>
-        {{/each}}
-    </select>
-
-    <label for="food-quantity">Quantity in grams</label>
-    <input name="food-quantity" type="number" min="0" />
-
+<form class="create-meal-form" action="/meals" method="post">
+    <div>
+        <label for="meal-name">Name</label>
+        <input type="text" id="input-meal-name" name="meal-name" />
+    </div>
+    <div id="container-meal-foods">
+        <div>
+            <label for="food">Food</label>
+            <select id="food-select" name="food-id">
+                {{#each foodInformations}}
+                <option value={{id}}>{{name}}</option>
+                {{/each}}
+            </select>
+            <label for="food-quantity">Quantity in grams</label>
+            <input name="food-quantity" type="number" min="0" />
+        </div>
+    </div>
+    <button id="button-add-food" type="button">Add food</button>
     <button type="submit">Submit</button>
 </form>
 
@@ -19,3 +26,28 @@
         {{/each}}
     </ul>
 </section>
+
+<script>
+    document.getElementById("button-add-food").addEventListener("click", function(event) {
+        console.log('Adding a new food!')
+        const contaimerMealFoods = document.getElementById('container-meal-foods');
+        const foodSelect = contaimerMealFoods.querySelector('select');
+        const quantityInput = contaimerMealFoods.querySelector('input');
+
+
+        const newFoodSelect = foodSelect.cloneNode(true);
+        const newQuantityInput = quantityInput.cloneNode(true);
+
+        contaimerMealFoods.appendChild(newFoodSelect);
+        contaimerMealFoods.appendChild(newQuantityInput);
+    })
+
+</script>
+
+<style>
+    .create-meal-form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+</style>
