Calculate and store macros in meals

--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -29,6 +29,15 @@
             <li>{{foodInfo.name}} x{{quantity}}grams</li>
             {{/each}}
         </ul>
+        <div>
+            <span>Macros</span>
+            <ul>
+                <li>Protein: {{macros.proteinInGramms}}</li>
+                <li>Fats: {{macros.fatInGramms}}</li>
+                <li>Carbs: {{macros.carbsInGramms}}</li>
+                <li>Calories: {{macros.calories}}</li>
+            </ul>
+        </div>
         {{/each}}
     </ul>
 </section>
